# lightning

./: .gitignore  CMakeLists.txt  README.md  alloc.c  alloc.h  cli.c  defs.h  hashmap.c  hashmap.h  list.c  list.h  local.c  proxy_config.h  proxy_config.m  sig_handler.c  sig_handler.h  socks5.c  socks5.h  util.c  util.h
log/: log.h
src/: Makefile  alloc.h  cli.c  cli.h  defs.h  encrypt.c  encrypt.h  hashmap.c  lightning  lightning_remote  local.c  pool.c  pool.h  remote.c  socks5.c  socks5.h  util.c  util.h
src/log/: log.h
src/test/: test_getaddrinfo.c
src/unused_yet/: list.h
unused_yet/: hashmap.h  list.c
